<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerHorizontal="true"
              android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/spicy_three_bean_chilli_recipe"
        />


      <RatingBar
        android:id="@+id/recipe_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/five_star_rating"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="5"
        android:theme="@style/RatingBar"
        />

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/crispy_tofu_black_rice_bowl"
        android:textSize="34sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/beginner"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/portions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2_people"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/cooking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/_30_mins"
            android:textSize="20sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/view_recipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_recipe"
        android:textSize="18sp"
        />

</LinearLayout>


