<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_centerHorizontal="true"
                                             android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="0dp"
        android:layout_height="255dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/spicy_three_bean_chilli_recipe"
        app:layout_constraintBottom_toTopOf="@+id/recipe_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <RatingBar
        android:id="@+id/recipe_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/five_star_rating"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="5"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toTopOf="@+id/recipe_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image"
        />

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/crispy_tofu_black_rice_bowl"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/portions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_rating"
        />


    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginner"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/portions"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/portions"
        />


    <TextView
        android:id="@+id/portions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/_2_people"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view_recipe_button"
        app:layout_constraintStart_toEndOf="@+id/difficulty"
        app:layout_constraintEnd_toStartOf="@+id/cooking_time"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title"
        />

    <TextView
        android:id="@+id/cooking_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_mins"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/portions"
        app:layout_constraintStart_toEndOf="@+id/portions"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/view_recipe_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/view_recipe"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty"
        />

</android.support.constraint.ConstraintLayout>


